[tool.poetry]
name = "py-alienvault-usm-anywhere"
version = "0.1.0"
description = ""
authors = ["Alain O'Dea", "ranguli <hello@joshmurphy.ca>"]

[tool.poetry.dependencies]
python = "^3.6"
requests-oauthlib = "^1.3.0"
requests-toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^5.3"
safety = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
